# agro-advisor

./: .env.example  .gitignore  README.md  VIDEO_SCRIPT.md  WRITEUP.md  advisor.py  advisory_formatting.py  api.py  cli.py  languages.py  observability.py  pyproject.toml  streamlit_app.py
agents/: crop_health_agent.py  market_agent.py  mcp_connection.py  orchestrator.py  weather_agent.py
mcp_server/: agmarknet_client.py  imd_alerts_client.py  kvk_locator_client.py  market_data.csv  server.py  weather_client.py
security/: guardrails.py
tests/: test_advisory_formatting.py  test_agents_smoke.py  test_api.py  test_live_diagnosis.py
voiceover/: scene1.m4a  scene2.m4a  scene3.m4a  scene4.m4a  scene5.m4a  scene6.m4a  scene7.m4a
