[project]
name = "agro-advisor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "google-adk>=2.3.0",
    "gtts>=2.5.4",
    "httpx>=0.28.1",
    "mcp>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
